Bug 474357, Calls to setCurrentTime, beginElementAt etc. should update the DOM state immediately. r+sr=roc
UltraBlame original commit: 97daab9778b0ee8903c9c990c67f4e8b0d0c0517

--- a/content/smil/test/test_smilGetStartTime.xhtml
+++ b/content/smil/test/test_smilGetStartTime.xhtml
@@ -334,12 +334,6 @@ main
 {
 /
 /
-Basic
-setting
-and
-getting
-/
-/
 indefinite
 is
 (
@@ -498,36 +492,6 @@ multiple
 /
 /
 intervals
-/
-/
-/
-/
-We
-do
-this
-via
-a
-series
-of
-setTimeouts
-because
-currently
-we
-sample
-(
-and
-/
-/
-update
-the
-model
-)
-asynchronously
-after
-a
-call
-to
-setCurrentTime
 anim
 .
 setAttribute
@@ -554,12 +518,9 @@ getStartTime
 Unexpected
 start
 time
-with
-begin
-=
-1s
-;
-3s
+before
+first
+interval
 "
 )
 ;
@@ -570,22 +531,35 @@ setCurrentTime
 1
 )
 ;
-setTimeout
+is
 (
-'
-checkStartOfFirstInterval
+anim
+.
+getStartTime
 (
 )
-'
-0
+1
+"
+Unexpected
+start
+time
+at
+start
+of
+first
+interval
+"
 )
 ;
-}
-function
-checkStartOfFirstInterval
+svg
+.
+setCurrentTime
 (
+1
+.
+5
 )
-{
+;
 is
 (
 anim
@@ -608,27 +582,9 @@ svg
 .
 setCurrentTime
 (
-1
-.
-5
+2
 )
 ;
-setTimeout
-(
-'
-checkMidFirstInterval
-(
-)
-'
-0
-)
-;
-}
-function
-checkMidFirstInterval
-(
-)
-{
 is
 (
 anim
@@ -641,9 +597,7 @@ getStartTime
 Unexpected
 start
 time
-at
-end
-of
+after
 first
 interval
 "
@@ -653,108 +607,9 @@ svg
 .
 setCurrentTime
 (
-2
-)
-;
-setTimeout
-(
-'
-checkEndOfFirstInterval
-(
-)
-'
-0
-)
-;
-}
-function
-checkEndOfFirstInterval
-(
-)
-{
-is
-(
-anim
-.
-getStartTime
-(
-)
-1
-"
-Unexpected
-start
-time
-in
-active
-interval
-"
-)
-;
-svg
-.
-setCurrentTime
-(
-2
-.
-5
-)
-;
-setTimeout
-(
-'
-checkAfterFirstInterval
-(
-)
-'
-0
-)
-;
-}
-function
-checkAfterFirstInterval
-(
-)
-{
-is
-(
-anim
-.
-getStartTime
-(
-)
-1
-"
-Unexpected
-start
-time
-while
-waiting
-"
-)
-;
-svg
-.
-setCurrentTime
-(
 3
 )
 ;
-setTimeout
-(
-'
-checkStartOfSecondInterval
-(
-)
-'
-0
-)
-;
-}
-function
-checkStartOfSecondInterval
-(
-)
-{
 is
 (
 anim
@@ -767,9 +622,8 @@ getStartTime
 Unexpected
 start
 time
-in
+during
 second
-active
 interval
 "
 )
@@ -781,22 +635,6 @@ setCurrentTime
 4
 )
 ;
-setTimeout
-(
-'
-checkEndOfSecondInterval
-(
-)
-'
-0
-)
-;
-}
-function
-checkEndOfSecondInterval
-(
-)
-{
 is
 (
 anim
@@ -809,8 +647,9 @@ getStartTime
 Unexpected
 start
 time
-while
-postactive
+after
+second
+interval
 "
 )
 ;
