--- a/content/smil/test/test_smilRestart.xhtml
+++ b/content/smil/test/test_smilRestart.xhtml
@@ -521,58 +521,109 @@ waitForExplicitFinish
 (
 )
 ;
-/
-/
-main
-:
-just
-triggers
-the
-first
-link
+function
+tryRestart
+(
+elem
+state
+expected
+)
+{
+var
+restartTime
+=
+svg
+.
+getCurrentTime
+(
+)
+;
+elem
+.
+beginElement
+(
+)
+;
+var
+restart
+=
+(
+elem
+.
+getStartTime
+(
+)
+=
+=
+=
+restartTime
+)
+;
+if
+(
+expected
+)
+{
+var
+msg
+=
+elem
+.
+id
++
+"
+can
+'
+t
+restart
 in
-the
-chain
-of
-function
--
-calls
+"
++
+state
++
+"
+state
+"
+;
+ok
+(
+restart
+msg
+)
+;
+}
+else
+{
+var
+msg
+=
+elem
+.
+id
++
+"
+can
+restart
+in
+"
++
+state
++
+"
+state
+"
+;
+ok
+(
+!
+restart
+msg
+)
+;
+}
+}
 function
 main
-(
-)
-{
-checkInitialState
-(
-)
-;
-}
-function
-restartAll
-(
-)
-{
-always
-.
-beginElement
-(
-)
-;
-whenNotActive
-.
-beginElement
-(
-)
-;
-never
-.
-beginElement
-(
-)
-;
-}
-function
-checkInitialState
 (
 )
 {
@@ -629,69 +680,31 @@ be
 allowed
 by
 all
-var
-restartTime
-=
-svg
-.
-getCurrentTime
-(
-)
-;
-restartAll
-(
-)
-;
-setTimeout
-(
-'
-doCheckInitialState
-(
-'
-+
-restartTime
-+
-'
-)
-'
-0
-)
-;
-}
-function
-doCheckInitialState
-(
-restartTime
-)
-{
-is
+tryRestart
 (
 always
-.
-getStartTime
-(
-)
-restartTime
+"
+waiting
+"
+true
 )
 ;
-is
+tryRestart
 (
 whenNotActive
-.
-getStartTime
-(
-)
-restartTime
+"
+waiting
+"
+true
 )
 ;
-is
+tryRestart
 (
 never
-.
-getStartTime
-(
-)
-restartTime
+"
+waiting
+"
+true
 )
 ;
 /
@@ -705,7 +718,11 @@ way
 var
 newTime
 =
-restartTime
+always
+.
+getStartTime
+(
+)
 +
 0
 .
@@ -724,102 +741,43 @@ setCurrentTime
 newTime
 )
 ;
-setTimeout
-(
-'
-checkHalfwayState
-(
-)
-'
-0
-)
-;
-}
-function
-checkHalfwayState
-(
-)
-{
 /
 /
-Try
-to
-restart
-half
--
-way
-through
--
--
-only
+Only
 '
 always
 '
 should
-succeed
-var
-restartTime
-=
-svg
-.
-getCurrentTime
-(
-)
-;
-restartAll
-(
-)
-;
-setTimeout
-(
-'
-doCheckHalfwayState
-(
-'
-+
-restartTime
-+
-'
-)
-'
-0
-)
-;
-}
-function
-doCheckHalfwayState
-(
-restartTime
-)
-{
-is
+be
+able
+to
+be
+restarted
+tryRestart
 (
 always
-.
-getStartTime
-(
-)
-restartTime
+"
+active
+"
+true
 )
 ;
-isnot
+tryRestart
 (
 whenNotActive
-.
-getStartTime
-(
-)
-restartTime
+"
+active
+"
+false
 )
 ;
-isnot
+tryRestart
 (
 never
-.
-getStartTime
-(
-)
-restartTime
+"
+active
+"
+false
 )
 ;
 /
@@ -829,7 +787,6 @@ skip
 to
 the
 end
-var
 newTime
 =
 always
@@ -853,108 +810,53 @@ setCurrentTime
 newTime
 )
 ;
-setTimeout
-(
-'
-checkEndingState
-(
-)
-'
-0
-)
-;
-}
-function
-checkEndingState
-(
-)
-{
 /
 /
-Try
-to
-restart
-after
-all
+All
 animations
 have
 finished
--
--
+so
 '
 always
 '
 and
-/
-/
 '
 whenNotActive
 '
 should
-succeed
-var
-restartTime
-=
-svg
-.
-getCurrentTime
-(
-)
-;
-restartAll
-(
-)
-;
-setTimeout
-(
-'
-doCheckEndingState
-(
-'
-+
-restartTime
-+
-'
-)
-'
-0
-)
-;
-}
-function
-doCheckEndingState
-(
-restartTime
-)
-{
-is
+be
+/
+/
+able
+to
+be
+restarted
+tryRestart
 (
 always
-.
-getStartTime
-(
-)
-restartTime
+"
+postactive
+"
+true
 )
 ;
-is
+tryRestart
 (
 whenNotActive
-.
-getStartTime
-(
-)
-restartTime
+"
+postactive
+"
+true
 )
 ;
-isnot
+tryRestart
 (
 never
-.
-getStartTime
-(
-)
-restartTime
+"
+postactive
+"
+false
 )
 ;
 SimpleTest
