Bug 356571 - loadOneOrMoreURIs gives up if one of the URLs has an unknown protocol, r=gavin
UltraBlame original commit: e369a4bf546c9b4fe0ddcd34119008d6153d0018

--- a/browser/base/content/test/dummy_page.html
+++ b/browser/base/content/test/dummy_page.html
@@ -7,11 +7,9 @@ head
 <
 title
 >
-Test
+Dummy
+test
 page
-for
-bug
-386835
 <
 /
 title
@@ -26,11 +24,9 @@ body
 <
 p
 >
-Test
+Dummy
+test
 page
-for
-bug
-386835
 <
 /
 p
