Bug 473765 - Intermittent test failure in bug 469985 test_events_mutation.html, r=davidb, marcoz
UltraBlame original commit: 26b74c26088bd0498a5e959d48da273fea1febf8

--- a/accessible/tests/mochitest/test_events_caretmove.html
+++ b/accessible/tests/mochitest/test_events_caretmove.html
@@ -190,6 +190,39 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+events
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 /
 *
