bug 467146 - font-size text attribute should be exposed in pt units, r=surkov, r=MarcoZ
UltraBlame original commit: c1c28d2c16f470d79442bd203b62157cc6b7f714

--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -378,9 +378,17 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+(
+MAC
+)
+?
+"
+8pt
+"
+:
+"
+10pt
+"
 "
 background
 -
@@ -659,9 +667,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+10pt
+"
 "
 background
 -
@@ -914,9 +922,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+14pt
+"
 "
 background
 -
@@ -1263,9 +1271,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+12pt
+"
 "
 background
 -
@@ -1613,9 +1621,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+12pt
+"
 "
 background
 -
@@ -1921,9 +1929,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+12pt
+"
 "
 background
 -
@@ -2228,9 +2236,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+12pt
+"
 "
 background
 -
@@ -2340,9 +2348,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+10pt
+"
 }
 ;
 testTextAttrs
@@ -2465,9 +2473,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+10pt
+"
 }
 ;
 testTextAttrs
@@ -2660,9 +2668,9 @@ font
 size
 "
 :
-gComputedStyle
-.
-fontSize
+"
+12pt
+"
 "
 background
 -
@@ -3150,6 +3158,15 @@ head
 >
 <
 body
+style
+=
+"
+font
+-
+size
+:
+12pt
+"
 >
 <
 a
@@ -3244,6 +3261,15 @@ id
 "
 area1
 "
+style
+=
+"
+font
+-
+size
+:
+smaller
+"
 >
 Normal
 <
@@ -3265,6 +3291,16 @@ id
 =
 "
 area2
+"
+style
+=
+"
+font
+-
+size
+:
+120
+%
 "
 >
 Normal
