--- a/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
+++ b/dom/tests/mochitest/ajax/offline/test_simpleManifest.html
@@ -194,7 +194,7 @@ ok
 (
 applicationCache
 .
-items
+mozItems
 .
 length
 =
@@ -203,7 +203,7 @@ length
 "
 applicationCache
 .
-items
+mozItems
 should
 be
 available
@@ -262,7 +262,7 @@ ok
 (
 applicationCache
 .
-length
+mozLength
 =
 =
 1
@@ -286,7 +286,7 @@ ok
 (
 applicationCache
 .
-item
+mozItem
 (
 0
 )
@@ -334,7 +334,7 @@ ok
 (
 applicationCache
 .
-items
+mozItems
 .
 length
 =
@@ -356,7 +356,7 @@ ok
 (
 applicationCache
 .
-items
+mozItems
 [
 0
 ]
@@ -400,7 +400,7 @@ ok
 (
 applicationCache
 .
-hasItem
+mozHasItem
 (
 "
 http
@@ -423,7 +423,7 @@ js
 "
 applicationCache
 .
-hasItem
+mozHasItem
 (
 )
 should
@@ -443,7 +443,7 @@ removes
 work
 applicationCache
 .
-remove
+mozRemove
 (
 "
 http
@@ -494,7 +494,7 @@ ok
 (
 applicationCache
 .
-length
+mozLength
 =
 =
 0
@@ -518,7 +518,7 @@ ok
 (
 applicationCache
 .
-items
+mozItems
 .
 length
 =
@@ -541,7 +541,7 @@ ok
 !
 applicationCache
 .
-hasItem
+mozHasItem
 (
 "
 http
@@ -564,7 +564,7 @@ js
 "
 applicationCache
 .
-hasItem
+mozHasItem
 (
 )
 should
@@ -942,7 +942,7 @@ applicationCache
 API
 applicationCache
 .
-add
+mozAdd
 (
 "
 http
