--- a/accessible/tests/mochitest/test_nsIAccessibleHyperLink.html
+++ b/accessible/tests/mochitest/test_nsIAccessibleHyperLink.html
@@ -402,64 +402,17 @@ if
 (
 aShowStateDebugFlag
 )
-{
-var
-list
-=
-gAccRetrieval
-.
-getStringStates
+alert
+(
+statesToString
 (
 state
 .
 value
 0
 )
-;
-var
-str
-=
-"
-"
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-list
-.
-length
-;
-i
-+
-+
-)
-str
-+
-=
-list
-.
-item
-(
-i
-)
-+
-"
-\
-n
-"
-;
-alert
-(
-str
 )
 ;
-}
 is
 (
 state
