Conditionally adjust two reftest references to match the non-assembly version of the code.  (Bug 465088)  r=bholley
UltraBlame original commit: 7f8e7e598284c0371da280737bcf5c8cb331fe7b

--- a/modules/libpr0n/test/reftest/pngsuite-ancillary/ccwn2c08.html
+++ b/modules/libpr0n/test/reftest/pngsuite-ancillary/ccwn2c08.html
@@ -2,6 +2,38 @@
 html
 >
 <
+head
+>
+<
+script
+src
+=
+"
+lcms
+-
+asm
+-
+check
+.
+js
+"
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+<
+/
+script
+>
+<
+/
+head
+>
+<
 body
 >
 <
@@ -5670,6 +5702,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -5695,6 +5747,52 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+150
+255
+92
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
@@ -10239,6 +10337,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -10264,6 +10382,52 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+255
+245
+50
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
@@ -11142,6 +11306,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -11167,6 +11351,52 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+255
+224
+50
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
