--- a/modules/libpr0n/test/reftest/pngsuite-ancillary/ccwn3p08.html
+++ b/modules/libpr0n/test/reftest/pngsuite-ancillary/ccwn3p08.html
@@ -2,6 +2,38 @@
 html
 >
 <
+head
+>
+<
+script
+src
+=
+"
+lcms
+-
+asm
+-
+check
+.
+js
+"
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+<
+/
+script
+>
+<
+/
+head
+>
+<
 body
 >
 <
@@ -4821,6 +4853,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -4846,6 +4898,52 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+163
+255
+92
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
@@ -5697,6 +5795,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -5723,6 +5841,14 @@ rgba
 /
 td
 >
+"
+)
+;
+document
+.
+write
+(
+"
 <
 td
 width
@@ -5749,6 +5875,87 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+163
+255
+92
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+163
+255
+92
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
@@ -6546,6 +6753,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -6571,6 +6798,52 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+163
+255
+92
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
@@ -21963,6 +22236,26 @@ rgba
 td
 >
 <
+script
+type
+=
+"
+application
+/
+ecmascript
+"
+>
+if
+(
+lcms_has_assembly
+)
+{
+document
+.
+write
+(
+"
+<
 td
 width
 =
@@ -21989,6 +22282,14 @@ rgba
 /
 td
 >
+"
+)
+;
+document
+.
+write
+(
+"
 <
 td
 width
@@ -22015,6 +22316,87 @@ rgba
 <
 /
 td
+>
+"
+)
+;
+}
+else
+{
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+83
+211
+255
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+document
+.
+write
+(
+"
+<
+td
+width
+=
+'
+1
+'
+style
+=
+'
+background
+-
+color
+:
+rgba
+(
+83
+211
+255
+1
+)
+'
+>
+<
+/
+td
+>
+"
+)
+;
+}
+<
+/
+script
 >
 <
 td
