Test for bug 464377 - <video> fires load events twice
UltraBlame original commit: 8471af5f9c6d085f6233d2a663053264e8b13acf

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -259,7 +259,7 @@ event
 .
 type
 "
-loadeddata
+load
 "
 "
 checking
@@ -885,21 +885,16 @@ Kick
 off
 test
 once
-we
-'
-ve
-got
-enough
-to
-do
-something
+video
+has
+loaded
 .
 video
 .
 addEventListener
 (
 "
-loadeddata
+load
 "
 runTest
 false
