--- a/toolkit/content/plugins.html
+++ b/toolkit/content/plugins.html
@@ -280,6 +280,17 @@ kairo
 at
 >
 -
+Ehsan
+Akhgari
+<
+ehsan
+.
+akhgari
+gmail
+.
+com
+>
+-
 -
 Alternatively
 the
@@ -681,6 +692,192 @@ application
 javascript
 "
 >
+function
+setDirection
+(
+)
+{
+var
+frame
+=
+document
+.
+getElementById
+(
+"
+directionDetector
+"
+)
+;
+var
+direction
+=
+frame
+.
+contentDocument
+.
+defaultView
+.
+window
+.
+getComputedStyle
+(
+frame
+.
+contentDocument
+.
+getElementById
+(
+"
+target
+"
+)
+"
+"
+)
+.
+getPropertyValue
+(
+"
+direction
+"
+)
+;
+document
+.
+body
+.
+removeChild
+(
+frame
+)
+;
+document
+.
+dir
+=
+direction
+;
+}
+function
+setupDirection
+(
+)
+{
+var
+frame
+=
+document
+.
+createElement
+(
+"
+iframe
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+id
+"
+"
+directionDetector
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+src
+"
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+directionDetector
+.
+html
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+width
+"
+"
+0
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+height
+"
+"
+0
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+style
+"
+"
+visibility
+:
+hidden
+;
+"
+)
+;
+frame
+.
+setAttribute
+(
+"
+onload
+"
+"
+setDirection
+(
+)
+;
+"
+)
+;
+document
+.
+body
+.
+appendChild
+(
+frame
+)
+;
+}
+setupDirection
+(
+)
+;
 /
 *
 JavaScript
