bug 476209 - refactor test_nsIAccessibleDocument.html, r=MarcoZ
UltraBlame original commit: 764a7cdc905bea3d21dabd9e07877d942042f8e7

--- a/accessible/tests/mochitest/test_nsIAccessibleDocument.html
+++ b/accessible/tests/mochitest/test_nsIAccessibleDocument.html
@@ -146,111 +146,78 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
 >
-const
-nsIAccessibleRetrieval
+<
+/
+script
+>
+<
+script
+type
 =
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-;
-const
-nsIAccessibleRole
+"
+application
+/
+javascript
+"
+src
 =
-Components
-.
-interfaces
-.
-nsIAccessibleRole
-;
-const
-nsIAccessibleDocument
-=
-Components
-.
-interfaces
-.
-nsIAccessibleDocument
-;
-const
-nsIDOMDocument
-=
-Components
-.
-interfaces
-.
-nsIDOMDocument
-;
-const
-nsIDOMWindow
-=
-Components
-.
-interfaces
-.
-nsIDOMWindow
-;
+"
+chrome
+:
 /
 /
-needed
-state
-flag
-const
-state_focusable
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+nsIAccessible_states
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
 =
-Components
-.
-interfaces
-.
-nsIAccessibleStates
-.
-STATE_FOCUSABLE
-;
-const
-state_readonly
-=
-Components
-.
-interfaces
-.
-nsIAccessibleStates
-.
-STATE_READONLY
-;
-var
-gAccRetrieval
-=
-null
-;
+"
+application
+/
+javascript
+"
+>
 function
 doTest
 (
 )
 {
-gAccRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-nsIAccessibleRetrieval
-)
-;
 /
 /
 Get
@@ -262,43 +229,12 @@ tag
 var
 docAcc
 =
-null
-;
-try
-{
-docAcc
-=
-gAccRetrieval
-.
-getAccessibleFor
+getAccessible
 (
 document
-)
-.
-QueryInterface
-(
+[
 nsIAccessibleDocument
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-docAcc
-"
-No
-accessible
-with
-interface
-for
-document
-!
-"
+]
 )
 ;
 if
@@ -358,48 +294,14 @@ read
 -
 only
 .
-var
-state
-=
-{
-}
-extraState
-=
-{
-}
+testStates
+(
 docAcc
-.
-getState
 (
-state
-extraState
-)
-;
-var
-desiredStates
-=
-(
-state_focusable
+STATE_READONLY
 |
-state_readonly
+STATE_FOCUSABLE
 )
-;
-is
-(
-state
-.
-value
-&
-desiredStates
-desiredStates
-"
-Wrong
-state
-bits
-for
-document
-!
-"
 )
 ;
 /
