Bug 472662 - no reorder event for most display property & DOM changes, r=marcoz, davidb
UltraBlame original commit: 02577adddd3e43111c91ad0f6e9859a4e69b236d

--- a/accessible/tests/mochitest/test_events_mutation.html
+++ b/accessible/tests/mochitest/test_events_mutation.html
@@ -299,6 +299,78 @@ kHideEvents
 |
 kShowEvent
 ;
+/
+*
+*
+*
+Base
+class
+to
+test
+mutation
+a11y
+events
+.
+*
+*
+param
+aNodeOrID
+[
+in
+]
+node
+invoker
+'
+s
+action
+is
+executed
+for
+*
+param
+aEventTypes
+[
+in
+]
+events
+to
+register
+(
+see
+constants
+above
+)
+*
+param
+aDoNotExpectEvents
+[
+in
+]
+boolean
+indicates
+if
+events
+are
+expected
+*
+param
+aIsDOMChange
+[
+in
+]
+boolean
+indicates
+if
+these
+are
+DOM
+events
+*
+layout
+events
+.
+*
+/
 function
 mutateA11yTree
 (
@@ -308,6 +380,9 @@ aDoNotExpectEvents
 aIsDOMChange
 )
 {
+/
+/
+Interface
 this
 .
 DOMNode
@@ -319,65 +394,184 @@ aNodeOrID
 ;
 this
 .
+doNotExpectEvents
+=
+aDoNotExpectEvents
+;
+this
+.
 eventSeq
 =
 [
 ]
 ;
-if
+this
+.
+setTarget
+=
+function
+mutateA11yTree_setTarget
 (
-aIsDOMChange
+aEventType
+aTarget
+)
+{
+var
+type
+=
+this
+.
+getA11yEventType
+(
+aEventType
+)
+;
+for
+(
+var
+idx
+=
+0
+;
+idx
+<
+this
+.
+eventSeq
+.
+length
+;
+idx
++
++
 )
 {
 if
 (
-aEventTypes
-&
-kHideEvent
-)
 this
 .
 eventSeq
-.
-push
-(
 [
-nsIAccessibleEvent
-.
-EVENT_DOM_DESTROY
+idx
+]
+[
+0
+]
+=
+=
+type
+)
+{
 this
 .
-DOMNode
+eventSeq
+[
+idx
 ]
+[
+1
+]
+=
+aTarget
+;
+break
+;
+}
+}
+}
+/
+/
+Implementation
+this
+.
+getA11yEventType
+=
+function
+mutateA11yTree_getA11yEventType
+(
+aEventType
 )
+{
+if
+(
+aEventType
+=
+=
+kReorderEvent
+)
+return
+nsIAccessibleEvent
+.
+EVENT_REORDER
 ;
 if
 (
-aEventTypes
-&
-kShowEvent
-)
 this
 .
-eventSeq
-.
-push
+mIsDOMChange
+)
+{
+if
 (
-[
+aEventType
+=
+=
+kHideEvent
+)
+return
+nsIAccessibleEvent
+.
+EVENT_DOM_DESTROY
+;
+if
+(
+aEventType
+=
+=
+kShowEvent
+)
+return
 nsIAccessibleEvent
 .
 EVENT_DOM_CREATE
-this
-.
-DOMNode
-]
-)
 ;
 }
 else
 {
 if
 (
+aEventType
+=
+=
+kHideEvent
+)
+return
+nsIAccessibleEvent
+.
+EVENT_ASYNCH_HIDE
+;
+if
+(
+aEventType
+=
+=
+kShowEvent
+)
+return
+nsIAccessibleEvent
+.
+EVENT_ASYNCH_SHOW
+;
+}
+}
+this
+.
+mIsDOMChange
+=
+aIsDOMChange
+;
+if
+(
 aEventTypes
 &
 kHideEvent
@@ -389,9 +583,12 @@ eventSeq
 push
 (
 [
-nsIAccessibleEvent
+this
 .
-EVENT_ASYNCH_HIDE
+getA11yEventType
+(
+kHideEvent
+)
 this
 .
 DOMNode
@@ -411,16 +608,18 @@ eventSeq
 push
 (
 [
-nsIAccessibleEvent
+this
 .
-EVENT_ASYNCH_SHOW
+getA11yEventType
+(
+kShowEvent
+)
 this
 .
 DOMNode
 ]
 )
 ;
-}
 if
 (
 aEventTypes
@@ -434,9 +633,12 @@ eventSeq
 push
 (
 [
-nsIAccessibleEvent
+this
 .
-EVENT_REORDER
+getA11yEventType
+(
+kReorderEvent
+)
 this
 .
 DOMNode
@@ -445,13 +647,21 @@ parentNode
 ]
 )
 ;
-this
-.
-doNotExpectEvents
-=
-aDoNotExpectEvents
-;
 }
+/
+*
+*
+*
+Change
+CSS
+style
+for
+the
+given
+node
+.
+*
+/
 function
 changeStyle
 (
@@ -523,6 +733,20 @@ aValue
 ;
 }
 }
+/
+*
+*
+*
+Change
+class
+name
+for
+the
+given
+node
+.
+*
+/
 function
 changeClass
 (
@@ -593,11 +817,29 @@ aParentNodeOrID
 )
 ;
 }
+/
+*
+*
+*
+Clone
+the
+node
+and
+append
+it
+to
+its
+parent
+.
+*
+/
 function
 cloneAndAppendToDOM
 (
 aNodeOrID
 aEventTypes
+aTargetFunc
+aReorderTargetFunc
 )
 {
 var
@@ -661,18 +903,64 @@ id
 '
 )
 ;
+var
+target
+=
 this
 .
-eventSeq
-[
-0
-]
-[
-1
-]
-=
+mTargetFunc
+?
+this
+.
+mTargetFunc
+.
+call
+(
+null
+newElm
+)
+:
 newElm
 ;
+this
+.
+setTarget
+(
+kShowEvent
+target
+)
+;
+if
+(
+this
+.
+mReorderTargetFunc
+)
+{
+var
+reorderTarget
+=
+this
+.
+mReorderTargetFunc
+.
+call
+(
+null
+this
+.
+DOMNode
+)
+;
+this
+.
+setTarget
+(
+kReorderEvent
+reorderTarget
+)
+;
+}
 this
 .
 DOMNode
@@ -707,12 +995,38 @@ DOM
 "
 ;
 }
+this
+.
+mTargetFunc
+=
+aTargetFunc
+;
+this
+.
+mReorderTargetFunc
+=
+aReorderTargetFunc
+;
 }
+/
+*
+*
+*
+Removes
+the
+node
+from
+DOM
+.
+*
+/
 function
 removeFromDOM
 (
 aNodeOrID
 aEventTypes
+aTargetFunc
+aReorderTargetFunc
 )
 {
 var
@@ -789,7 +1103,79 @@ DOM
 "
 ;
 }
+if
+(
+aTargetFunc
+&
+&
+(
+eventTypes
+&
+kHideEvent
+)
+)
+this
+.
+setTarget
+(
+kHideEvent
+aTargetFunc
+.
+call
+(
+null
+this
+.
+DOMNode
+)
+)
+;
+if
+(
+aReorderTargetFunc
+&
+&
+(
+eventTypes
+&
+kReorderEvent
+)
+)
+this
+.
+setTarget
+(
+kReorderEvent
+aReorderTargetFunc
+.
+call
+(
+null
+this
+.
+DOMNode
+)
+)
+;
 }
+/
+*
+*
+*
+Clone
+the
+node
+and
+replace
+the
+original
+node
+by
+cloned
+one
+.
+*
+/
 function
 cloneAndReplaceInDOM
 (
@@ -888,6 +1274,30 @@ DOM
 "
 ;
 }
+}
+function
+getFirstChild
+(
+aNode
+)
+{
+return
+aNode
+.
+firstChild
+;
+}
+function
+getParent
+(
+aNode
+)
+{
+return
+aNode
+.
+parentNode
+;
 }
 /
 *
@@ -997,19 +1407,6 @@ kHideEvents
 )
 )
 ;
-/
-/
-XXX
-:
-bug
-472662
--
-there
-is
-no
-expected
-reorder
-event
 gQueue
 .
 push
@@ -1024,7 +1421,7 @@ display
 "
 inline
 "
-kShowEvent
+kShowEvents
 )
 )
 ;
@@ -1296,19 +1693,6 @@ id
 link5
 "
 ;
-/
-/
-XXX
-:
-bug
-472662
--
-there
-is
-no
-expected
-reorder
-event
 gQueue
 .
 push
@@ -1317,7 +1701,6 @@ new
 cloneAndAppendToDOM
 (
 id
-kShowEvent
 )
 )
 ;
@@ -1431,7 +1814,6 @@ new
 cloneAndAppendToDOM
 (
 id
-kShowEvent
 )
 )
 ;
@@ -1443,6 +1825,80 @@ new
 removeFromDOM
 (
 id
+)
+)
+;
+/
+/
+Show
+/
+hide
+events
+by
+adding
+new
+DOM
+node
+containing
+accessible
+DOM
+and
+/
+/
+removing
+old
+one
+there
+is
+reorder
+event
+for
+their
+parent
+.
+var
+id
+=
+"
+child3
+"
+;
+gQueue
+.
+push
+(
+new
+cloneAndAppendToDOM
+(
+id
+kShowEvents
+getFirstChild
+getParent
+)
+)
+;
+/
+/
+XXX
+:
+bug
+475503
+there
+is
+no
+hide
+event
+gQueue
+.
+push
+(
+new
+removeFromDOM
+(
+id
+kReorderEvent
+getFirstChild
+getParent
 )
 )
 ;
@@ -1501,19 +1957,6 @@ the
 parent
 node
 .
-/
-/
-XXX
-:
-bug
-472662
--
-there
-is
-no
-expected
-reorder
-event
 gQueue
 .
 push
@@ -1529,7 +1972,7 @@ link7
 "
 "
 "
-kShowEvent
+kShowEvents
 )
 )
 ;
@@ -1788,7 +2231,18 @@ id
 "
 eventdump
 "
+>
+<
 /
+div
+>
+<
+div
+id
+=
+"
+testContainer
+"
 >
 <
 a
@@ -1980,6 +2434,30 @@ listitem
 span
 >
 <
+span
+id
+=
+"
+child3
+"
+>
+<
+span
+role
+=
+"
+listitem
+"
+>
+<
+/
+span
+>
+<
+/
+span
+>
+<
 /
 div
 >
@@ -2070,6 +2548,10 @@ Link
 <
 /
 a
+>
+<
+/
+div
 >
 <
 /
