Bug 455654. Rework the download-rate, playback-rate and related statistics so they're managed by the decoders in a thread-safe way. Implement proper HTML5 readyState handling with event firing, including 'canplay' and 'canplaythrough' events and autoplay behaviour. Also changes buffering so that we buffer when we're actually about to run out of data, instead of trying to guess when to buffer based on rate estimates. r=doublec
UltraBlame original commit: ba595db2b681d7f5554f6235c2dc0f2cadb4e87a

--- a/content/media/video/test/file_access_controls.html
+++ b/content/media/video/test/file_access_controls.html
@@ -657,6 +657,26 @@ result
 code
 )
 {
+dump
+(
+(
+gTestNum
+-
+1
+)
++
+"
+:
+"
++
+code
++
+"
+\
+n
+"
+)
+;
 netscape
 .
 security
@@ -668,15 +688,6 @@ enablePrivilege
 "
 UniversalXPConnect
 "
-)
-;
-dump
-(
-"
-result
-"
-+
-code
 )
 ;
 opener
@@ -989,6 +1000,32 @@ gTestNum
 .
 description
 ;
+dump
+(
+"
+Starting
+test
+"
++
+gTestNum
++
+"
+at
+"
++
+gTests
+[
+gTestNum
+]
+.
+url
++
+"
+\
+n
+"
+)
+;
 video
 .
 src
@@ -999,6 +1036,12 @@ gTestNum
 ]
 .
 url
+;
+video
+.
+load
+(
+)
 ;
 gTestNum
 +
