--- a/content/media/video/test/test_media_selection.html
+++ b/content/media/video/test/test_media_selection.html
@@ -632,28 +632,36 @@ check_ogg
 e
 )
 {
-ok
+is
 (
 e
 .
 videoWidth
-=
-=
 320
-&
-&
+"
+video
+width
+"
++
+e
+.
+currentSrc
+)
+;
+is
+(
 e
 .
 videoHeight
-=
-=
 240
 "
 video
-should
-be
-320x240
+height
 "
++
+e
+.
+currentSrc
 )
 ;
 }
