--- a/content/media/video/test/test_progress1.html
+++ b/content/media/video/test/test_progress1.html
@@ -144,6 +144,11 @@ last_progress
 =
 false
 ;
+var
+last_progress_total
+=
+0
+;
 function
 on_loadedmetadata
 (
@@ -171,10 +176,7 @@ element
 after
 metadata
 loaded
-:
 "
-+
-v
 )
 ;
 v
@@ -231,10 +233,7 @@ progress
 event
 after
 completed
-:
 "
-+
-completed
 )
 ;
 ok
@@ -256,9 +255,27 @@ e
 loaded
 >
 =
-0
-&
-&
+last_progress_total
+"
+Check
+progress
+increasing
+:
+"
++
+e
+.
+loaded
+)
+;
+last_progress_total
+=
+e
+.
+loaded
+;
+ok
+(
 e
 .
 loaded
@@ -270,7 +287,8 @@ total
 "
 Check
 progress
-loaded
+in
+bounds
 :
 "
 +
@@ -279,24 +297,17 @@ e
 loaded
 )
 ;
-ok
+is
 (
 e
 .
 total
-=
-=
 285310
 "
 Check
 progress
 total
-:
 "
-+
-e
-.
-total
 )
 ;
 last_progress
@@ -339,37 +350,27 @@ completed
 =
 true
 ;
-ok
+is
 (
 last_progress
-=
-=
 285310
 "
 Last
 progress
 event
 size
-:
 "
-+
-last_progress
 )
 ;
-ok
+is
 (
 load_count
-=
-=
 1
 "
 load
 event
 raised
-:
 "
-+
-load_count
 )
 ;
 SimpleTest
