--- a/content/media/video/test/test_progress2.html
+++ b/content/media/video/test/test_progress2.html
@@ -147,6 +147,11 @@ last_progress
 =
 false
 ;
+var
+last_progress_total
+=
+0
+;
 function
 on_loadedmetadata
 (
@@ -188,10 +193,7 @@ progress
 event
 after
 completed
-:
 "
-+
-completed
 )
 ;
 ok
@@ -213,9 +215,27 @@ e
 loaded
 >
 =
-0
-&
-&
+last_progress_total
+"
+Check
+progress
+increasing
+:
+"
++
+e
+.
+loaded
+)
+;
+last_progress_total
+=
+e
+.
+loaded
+;
+ok
+(
 e
 .
 loaded
@@ -227,7 +247,8 @@ total
 "
 Check
 progress
-loaded
+in
+bounds
 :
 "
 +
@@ -236,24 +257,17 @@ e
 loaded
 )
 ;
-ok
+is
 (
 e
 .
 total
-=
-=
 102444
 "
 Check
 progress
 total
-:
 "
-+
-e
-.
-total
 )
 ;
 last_progress
@@ -285,21 +299,16 @@ completed
 =
 true
 ;
-ok
+is
 (
 last_progress
-=
-=
 102444
 "
 Last
 progress
 event
 size
-:
 "
-+
-last_progress
 )
 ;
 SimpleTest
