--- a/content/media/video/test/test_progress3.html
+++ b/content/media/video/test/test_progress3.html
@@ -166,6 +166,11 @@ last_progress
 =
 false
 ;
+var
+last_progress_total
+=
+0
+;
 function
 on_loadedmetadata
 (
@@ -193,10 +198,7 @@ element
 after
 metadata
 loaded
-:
 "
-+
-v
 )
 ;
 v
@@ -208,7 +210,7 @@ play
 dump
 (
 '
-test_progress1
+test_progress3
 :
 on_loadedmetadata
 exiting
@@ -227,7 +229,7 @@ e
 dump
 (
 '
-test_progress1
+test_progress3
 :
 do_progress
 '
@@ -235,6 +237,14 @@ do_progress
 e
 .
 loaded
++
+'
+/
+'
++
+e
+.
+total
 +
 '
 \
@@ -253,10 +263,7 @@ progress
 event
 after
 completed
-:
 "
-+
-completed
 )
 ;
 ok
@@ -278,9 +285,27 @@ e
 loaded
 >
 =
-0
-&
-&
+last_progress_total
+"
+Check
+progress
+increasing
+:
+"
++
+e
+.
+loaded
+)
+;
+last_progress_total
+=
+e
+.
+loaded
+;
+ok
+(
 e
 .
 loaded
@@ -292,7 +317,8 @@ total
 "
 Check
 progress
-loaded
+in
+bounds
 :
 "
 +
@@ -301,24 +327,17 @@ e
 loaded
 )
 ;
-ok
+is
 (
 e
 .
 total
-=
-=
 28942
 "
 Check
 progress
 total
-:
 "
-+
-e
-.
-total
 )
 ;
 last_progress
@@ -336,7 +355,7 @@ do_ended
 dump
 (
 '
-test_progress1
+test_progress3
 :
 do_ended
 \
@@ -361,37 +380,27 @@ completed
 =
 true
 ;
-ok
+is
 (
 last_progress
-=
-=
 28942
 "
 Last
 progress
 event
 size
-:
 "
-+
-last_progress
 )
 ;
-ok
+is
 (
 load_count
-=
-=
 1
 "
 load
 event
 raised
-:
 "
-+
-load_count
 )
 ;
 SimpleTest
@@ -414,7 +423,7 @@ load_count
 dump
 (
 '
-test_progress1
+test_progress3
 :
 do_loaded
 '
@@ -450,7 +459,7 @@ v
 dump
 (
 '
-test_progress1
+test_progress3
 :
 timeupdate
 :
@@ -475,7 +484,7 @@ do_play
 dump
 (
 '
-test_progress1
+test_progress3
 :
 do_play
 \
