--- a/content/media/video/test/test_progress4.html
+++ b/content/media/video/test/test_progress4.html
@@ -169,6 +169,11 @@ last_progress
 =
 false
 ;
+var
+last_progress_total
+=
+0
+;
 function
 on_loadedmetadata
 (
@@ -210,10 +215,7 @@ progress
 event
 after
 completed
-:
 "
-+
-completed
 )
 ;
 ok
@@ -235,9 +237,27 @@ e
 loaded
 >
 =
-0
-&
-&
+last_progress_total
+"
+Check
+progress
+increasing
+:
+"
++
+e
+.
+loaded
+)
+;
+last_progress_total
+=
+e
+.
+loaded
+;
+ok
+(
 e
 .
 loaded
@@ -249,7 +269,8 @@ total
 "
 Check
 progress
-loaded
+in
+bounds
 :
 "
 +
@@ -258,24 +279,17 @@ e
 loaded
 )
 ;
-ok
+is
 (
 e
 .
 total
-=
-=
 11069
 "
 Check
 progress
 total
-:
 "
-+
-e
-.
-total
 )
 ;
 last_progress
@@ -307,21 +321,16 @@ completed
 =
 true
 ;
-ok
+is
 (
 last_progress
-=
-=
 11069
 "
 Last
 progress
 event
 size
-:
 "
-+
-last_progress
 )
 ;
 SimpleTest
