bug 476796 - Refactor test_nsIAccessibleImage, r=surkov
UltraBlame original commit: 94abcf77a175ac1e71ac4268d41397704718e0c4

--- a/accessible/tests/mochitest/test_nsIAccessibleImage.html
+++ b/accessible/tests/mochitest/test_nsIAccessibleImage.html
@@ -151,28 +151,106 @@ application
 /
 javascript
 "
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+common
+.
+js
+"
 >
-const
-nsIAccessibleImage
+<
+/
+script
+>
+<
+script
+type
 =
-Components
-.
-interfaces
-.
-nsIAccessibleImage
-;
-const
-nsIAccessibleCoordinateType
+"
+application
+/
+javascript
+"
+src
 =
-Components
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+role
 .
-interfaces
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+chrome
+:
+/
+/
+mochikit
+/
+content
+/
+a11y
+/
+accessible
+/
+attributes
 .
-nsIAccessibleCoordinateType
-;
-var
-gAccRetrieval
-;
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
 function
 testCoordinates
 (
@@ -208,60 +286,13 @@ parentY
 {
 }
 ;
-var
-imageAcc
-=
-null
-;
-try
-{
-imageAcc
-=
-aAcc
-.
-QueryInterface
-(
-nsIAccessibleImage
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-imageAcc
-"
-no
-image
-interface
-for
-"
-+
-aID
-+
-"
-!
-"
-)
-;
-if
-(
-!
-imageAcc
-)
-return
-;
 /
 /
 get
 screen
 coordinates
 .
-imageAcc
+aAcc
 .
 getImagePosition
 (
@@ -278,7 +309,7 @@ get
 window
 coordinates
 .
-imageAcc
+aAcc
 .
 getImagePosition
 (
@@ -296,7 +327,7 @@ parent
 related
 coordinates
 .
-imageAcc
+aAcc
 .
 getImagePosition
 (
@@ -360,7 +391,6 @@ value
 <
 0
 )
-{
 parentY
 .
 value
@@ -368,7 +398,6 @@ value
 -
 1
 ;
-}
 /
 /
 See
@@ -404,7 +433,7 @@ try
 {
 tempAcc
 =
-imageAcc
+aAcc
 .
 getChildAtPoint
 (
@@ -426,7 +455,7 @@ e
 is
 (
 tempAcc
-imageAcc
+aAcc
 "
 Wrong
 accessible
@@ -460,7 +489,7 @@ try
 {
 imageParentAcc
 =
-imageAcc
+aAcc
 .
 parent
 ;
@@ -620,7 +649,7 @@ height
 {
 }
 ;
-imageAcc
+aAcc
 .
 getImageSize
 (
@@ -680,50 +709,14 @@ aActionNames
 )
 {
 var
-elem
-=
-document
-.
-getElementById
-(
-aID
-)
-;
-var
-acc
-;
-try
-{
 acc
 =
-gAccRetrieval
-.
-getAccessibleFor
+getAccessible
 (
-elem
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-ok
-(
-acc
-"
-No
-accessible
-for
-"
-+
 aID
-+
-"
-!
-"
+[
+nsIAccessibleImage
+]
 )
 ;
 if
@@ -750,6 +743,16 @@ aID
 "
 !
 "
+)
+;
+/
+/
+Test
+role
+testRole
+(
+aID
+ROLE_GRAPHIC
 )
 ;
 /
@@ -783,62 +786,20 @@ any
 image
 var
 attributes
-;
-try
-{
-attributes
 =
-acc
-.
-attributes
-;
-}
-catch
-(
-e
-)
 {
-}
-ok
-(
-attributes
-"
-no
-attributes
-on
-"
-+
-aID
-+
-"
-!
-"
-)
-;
-is
-(
-attributes
-.
-getStringProperty
-(
 "
 src
 "
-)
+:
 aSRC
-"
-no
-correct
-src
-attribute
-for
-"
-+
-aID
-+
-"
-!
-"
+}
+;
+testAttrs
+(
+acc
+attributes
+true
 )
 ;
 if
@@ -883,7 +844,6 @@ index
 +
 +
 )
-{
 is
 (
 acc
@@ -918,38 +878,11 @@ index
 ;
 }
 }
-}
 function
 doTest
 (
 )
 {
-gAccRetrieval
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-accessibleRetrieval
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIAccessibleRetrieval
-)
-;
 /
 /
 Test
