Backed out changeset ba595db2b681
UltraBlame original commit: c802d7a5b897eda3abd7d7fb6f2cfa91e3fe7012

--- a/content/media/video/test/file_access_controls.html
+++ b/content/media/video/test/file_access_controls.html
@@ -657,26 +657,6 @@ result
 code
 )
 {
-dump
-(
-(
-gTestNum
--
-1
-)
-+
-"
-:
-"
-+
-code
-+
-"
-\
-n
-"
-)
-;
 netscape
 .
 security
@@ -688,6 +668,15 @@ enablePrivilege
 "
 UniversalXPConnect
 "
+)
+;
+dump
+(
+"
+result
+"
++
+code
 )
 ;
 opener
@@ -1000,32 +989,6 @@ gTestNum
 .
 description
 ;
-dump
-(
-"
-Starting
-test
-"
-+
-gTestNum
-+
-"
-at
-"
-+
-gTests
-[
-gTestNum
-]
-.
-url
-+
-"
-\
-n
-"
-)
-;
 video
 .
 src
@@ -1036,12 +999,6 @@ gTestNum
 ]
 .
 url
-;
-video
-.
-load
-(
-)
 ;
 gTestNum
 +
