--- a/content/media/video/test/test_media_selection.html
+++ b/content/media/video/test/test_media_selection.html
@@ -632,36 +632,28 @@ check_ogg
 e
 )
 {
-is
+ok
 (
 e
 .
 videoWidth
+=
+=
 320
-"
-video
-width
-"
-+
-e
-.
-currentSrc
-)
-;
-is
-(
+&
+&
 e
 .
 videoHeight
+=
+=
 240
 "
 video
-height
+should
+be
+320x240
 "
-+
-e
-.
-currentSrc
 )
 ;
 }
