--- a/content/media/video/test/test_progress2.html
+++ b/content/media/video/test/test_progress2.html
@@ -147,11 +147,6 @@ last_progress
 =
 false
 ;
-var
-last_progress_total
-=
-0
-;
 function
 on_loadedmetadata
 (
@@ -193,7 +188,10 @@ progress
 event
 after
 completed
+:
 "
++
+completed
 )
 ;
 ok
@@ -215,27 +213,9 @@ e
 loaded
 >
 =
-last_progress_total
-"
-Check
-progress
-increasing
-:
-"
-+
-e
-.
-loaded
-)
-;
-last_progress_total
-=
-e
-.
-loaded
-;
-ok
-(
+0
+&
+&
 e
 .
 loaded
@@ -247,8 +227,7 @@ total
 "
 Check
 progress
-in
-bounds
+loaded
 :
 "
 +
@@ -257,17 +236,24 @@ e
 loaded
 )
 ;
-is
+ok
 (
 e
 .
 total
+=
+=
 102444
 "
 Check
 progress
 total
+:
 "
++
+e
+.
+total
 )
 ;
 last_progress
@@ -299,16 +285,21 @@ completed
 =
 true
 ;
-is
+ok
 (
 last_progress
+=
+=
 102444
 "
 Last
 progress
 event
 size
+:
 "
++
+last_progress
 )
 ;
 SimpleTest
