--- a/content/media/video/test/test_progress3.html
+++ b/content/media/video/test/test_progress3.html
@@ -166,11 +166,6 @@ last_progress
 =
 false
 ;
-var
-last_progress_total
-=
-0
-;
 function
 on_loadedmetadata
 (
@@ -198,7 +193,10 @@ element
 after
 metadata
 loaded
+:
 "
++
+v
 )
 ;
 v
@@ -210,7 +208,7 @@ play
 dump
 (
 '
-test_progress3
+test_progress1
 :
 on_loadedmetadata
 exiting
@@ -229,7 +227,7 @@ e
 dump
 (
 '
-test_progress3
+test_progress1
 :
 do_progress
 '
@@ -237,14 +235,6 @@ do_progress
 e
 .
 loaded
-+
-'
-/
-'
-+
-e
-.
-total
 +
 '
 \
@@ -263,7 +253,10 @@ progress
 event
 after
 completed
+:
 "
++
+completed
 )
 ;
 ok
@@ -285,27 +278,9 @@ e
 loaded
 >
 =
-last_progress_total
-"
-Check
-progress
-increasing
-:
-"
-+
-e
-.
-loaded
-)
-;
-last_progress_total
-=
-e
-.
-loaded
-;
-ok
-(
+0
+&
+&
 e
 .
 loaded
@@ -317,8 +292,7 @@ total
 "
 Check
 progress
-in
-bounds
+loaded
 :
 "
 +
@@ -327,17 +301,24 @@ e
 loaded
 )
 ;
-is
+ok
 (
 e
 .
 total
+=
+=
 28942
 "
 Check
 progress
 total
+:
 "
++
+e
+.
+total
 )
 ;
 last_progress
@@ -355,7 +336,7 @@ do_ended
 dump
 (
 '
-test_progress3
+test_progress1
 :
 do_ended
 \
@@ -380,27 +361,37 @@ completed
 =
 true
 ;
-is
+ok
 (
 last_progress
+=
+=
 28942
 "
 Last
 progress
 event
 size
+:
 "
++
+last_progress
 )
 ;
-is
+ok
 (
 load_count
+=
+=
 1
 "
 load
 event
 raised
+:
 "
++
+load_count
 )
 ;
 SimpleTest
@@ -423,7 +414,7 @@ load_count
 dump
 (
 '
-test_progress3
+test_progress1
 :
 do_loaded
 '
@@ -459,7 +450,7 @@ v
 dump
 (
 '
-test_progress3
+test_progress1
 :
 timeupdate
 :
@@ -484,7 +475,7 @@ do_play
 dump
 (
 '
-test_progress3
+test_progress1
 :
 do_play
 \
