--- a/content/media/video/test/test_progress4.html
+++ b/content/media/video/test/test_progress4.html
@@ -169,11 +169,6 @@ last_progress
 =
 false
 ;
-var
-last_progress_total
-=
-0
-;
 function
 on_loadedmetadata
 (
@@ -215,7 +210,10 @@ progress
 event
 after
 completed
+:
 "
++
+completed
 )
 ;
 ok
@@ -237,27 +235,9 @@ e
 loaded
 >
 =
-last_progress_total
-"
-Check
-progress
-increasing
-:
-"
-+
-e
-.
-loaded
-)
-;
-last_progress_total
-=
-e
-.
-loaded
-;
-ok
-(
+0
+&
+&
 e
 .
 loaded
@@ -269,8 +249,7 @@ total
 "
 Check
 progress
-in
-bounds
+loaded
 :
 "
 +
@@ -279,17 +258,24 @@ e
 loaded
 )
 ;
-is
+ok
 (
 e
 .
 total
+=
+=
 11069
 "
 Check
 progress
 total
+:
 "
++
+e
+.
+total
 )
 ;
 last_progress
@@ -321,16 +307,21 @@ completed
 =
 true
 ;
-is
+ok
 (
 last_progress
+=
+=
 11069
 "
 Last
 progress
 event
 size
+:
 "
++
+last_progress
 )
 ;
 SimpleTest
