--- a/content/media/video/test/test_progress1.html
+++ b/content/media/video/test/test_progress1.html
@@ -144,11 +144,6 @@ last_progress
 =
 false
 ;
-var
-last_progress_total
-=
-0
-;
 function
 on_loadedmetadata
 (
@@ -176,7 +171,10 @@ element
 after
 metadata
 loaded
+:
 "
++
+v
 )
 ;
 v
@@ -233,7 +231,10 @@ progress
 event
 after
 completed
+:
 "
++
+completed
 )
 ;
 ok
@@ -255,27 +256,9 @@ e
 loaded
 >
 =
-last_progress_total
-"
-Check
-progress
-increasing
-:
-"
-+
-e
-.
-loaded
-)
-;
-last_progress_total
-=
-e
-.
-loaded
-;
-ok
-(
+0
+&
+&
 e
 .
 loaded
@@ -287,8 +270,7 @@ total
 "
 Check
 progress
-in
-bounds
+loaded
 :
 "
 +
@@ -297,17 +279,24 @@ e
 loaded
 )
 ;
-is
+ok
 (
 e
 .
 total
+=
+=
 285310
 "
 Check
 progress
 total
+:
 "
++
+e
+.
+total
 )
 ;
 last_progress
@@ -350,27 +339,37 @@ completed
 =
 true
 ;
-is
+ok
 (
 last_progress
+=
+=
 285310
 "
 Last
 progress
 event
 size
+:
 "
++
+last_progress
 )
 ;
-is
+ok
 (
 load_count
+=
+=
 1
 "
 load
 event
 raised
+:
 "
++
+load_count
 )
 ;
 SimpleTest
