--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -208,6 +208,215 @@ text
 javascript
 "
 >
+/
+*
+*
+Positions
+of
+the
+UI
+elements
+relative
+to
+the
+upper
+-
+left
+corner
+of
+the
+*
+<
+video
+>
+box
+.
+*
+/
+const
+videoWidth
+=
+320
+;
+const
+videoHeight
+=
+240
+;
+const
+videoDuration
+=
+3
+.
+8329999446868896
+;
+const
+playButtonWidth
+=
+28
+;
+const
+playButtonHeight
+=
+28
+;
+const
+muteButtonWidth
+=
+33
+;
+const
+muteButtonHeight
+=
+28
+;
+const
+scrubberWidth
+=
+videoWidth
+-
+playButtonWidth
+-
+muteButtonWidth
+;
+const
+scrubberHeight
+=
+28
+;
+const
+thumbWidth
+=
+11
+;
+/
+/
+Play
+button
+is
+on
+the
+bottom
+-
+left
+const
+playButtonCenterX
+=
+0
++
+Math
+.
+round
+(
+playButtonWidth
+/
+2
+)
+;
+const
+playButtonCenterY
+=
+videoHeight
+-
+Math
+.
+round
+(
+playButtonHeight
+/
+2
+)
+;
+/
+/
+Mute
+button
+is
+on
+the
+bottom
+-
+right
+const
+muteButtonCenterX
+=
+videoWidth
+-
+Math
+.
+round
+(
+muteButtonWidth
+/
+2
+)
+;
+const
+muteButtonCenterY
+=
+videoHeight
+-
+Math
+.
+round
+(
+muteButtonHeight
+/
+2
+)
+;
+/
+/
+Scrubber
+bar
+is
+between
+the
+play
+and
+mute
+buttons
+.
+We
+don
+'
+t
+need
+it
+'
+s
+/
+/
+X
+center
+just
+the
+offset
+of
+its
+box
+.
+const
+scrubberOffsetX
+=
+0
++
+playButtonWidth
+;
+const
+scrubberCenterY
+=
+videoHeight
+-
+Math
+.
+round
+(
+scrubberHeight
+/
+2
+)
+;
 function
 runTest
 (
@@ -243,6 +452,23 @@ switch
 testnum
 )
 {
+/
+*
+*
+Check
+operation
+of
+play
+/
+pause
+/
+mute
+/
+unmute
+buttons
+.
+*
+/
 case
 1
 :
@@ -305,8 +531,8 @@ button
 synthesizeMouse
 (
 video
-12
-228
+playButtonCenterX
+playButtonCenterY
 {
 }
 )
@@ -368,8 +594,8 @@ button
 synthesizeMouse
 (
 video
-12
-228
+playButtonCenterX
+playButtonCenterY
 {
 }
 )
@@ -431,8 +657,8 @@ button
 synthesizeMouse
 (
 video
-308
-228
+muteButtonCenterX
+muteButtonCenterY
 {
 }
 )
@@ -494,14 +720,44 @@ button
 synthesizeMouse
 (
 video
-308
-228
+muteButtonCenterX
+muteButtonCenterY
 {
 }
 )
 ;
 break
 ;
+/
+*
+*
+Bug
+470596
+:
+Make
+sure
+that
+having
+CSS
+border
+or
+padding
+doesn
+'
+t
+*
+break
+the
+controls
+(
+though
+it
+should
+move
+them
+)
+*
+/
 case
 5
 :
@@ -548,34 +804,6 @@ state
 "
 )
 ;
-/
-/
-Bug
-470596
-:
-Make
-sure
-that
-having
-CSS
-border
-or
-padding
-doesn
-'
-t
-/
-/
-break
-the
-controls
-(
-though
-it
-should
-move
-them
-)
 video
 .
 style
@@ -641,10 +869,10 @@ synthesizeMouse
 video
 100
 +
-12
+playButtonCenterX
 40
 +
-228
+playButtonCenterY
 {
 }
 )
@@ -697,6 +925,60 @@ state
 "
 )
 ;
+video
+.
+pause
+(
+)
+;
+break
+;
+case
+7
+:
+is
+(
+event
+.
+type
+"
+pause
+"
+"
+checking
+event
+type
+"
+)
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
 /
 /
 Click
@@ -708,10 +990,10 @@ synthesizeMouse
 video
 100
 +
-308
+muteButtonCenterX
 40
 +
-228
+muteButtonCenterY
 {
 }
 )
@@ -719,7 +1001,7 @@ video
 break
 ;
 case
-7
+8
 :
 is
 (
@@ -741,7 +1023,7 @@ is
 video
 .
 paused
-false
+true
 "
 checking
 video
@@ -761,6 +1043,629 @@ checking
 video
 mute
 state
+"
+)
+;
+/
+/
+Clear
+the
+style
+set
+in
+test
+5
+.
+video
+.
+style
+.
+border
+=
+"
+"
+;
+video
+.
+style
+.
+borderWidth
+=
+"
+"
+;
+video
+.
+style
+.
+padding
+=
+"
+"
+;
+video
+.
+muted
+=
+false
+;
+break
+;
+/
+*
+*
+Previous
+tests
+have
+moved
+playback
+postion
+reset
+it
+to
+0
+.
+*
+/
+case
+9
+:
+is
+(
+event
+.
+type
+"
+volumechange
+"
+"
+checking
+event
+type
+"
+)
+;
+is
+(
+video
+.
+paused
+true
+"
+checking
+video
+play
+state
+"
+)
+;
+is
+(
+video
+.
+muted
+false
+"
+checking
+video
+mute
+state
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+video
+.
+currentTime
+=
+0
+.
+0
+;
+break
+;
+case
+10
+:
+is
+(
+event
+.
+type
+"
+seeking
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+/
+*
+*
+Drag
+the
+slider
+'
+s
+thumb
+to
+the
+halfway
+point
+with
+the
+mouse
+.
+*
+/
+case
+11
+:
+is
+(
+event
+.
+type
+"
+seeked
+"
+"
+checking
+event
+type
+"
+)
+;
+is
+(
+video
+.
+currentTime
+0
+.
+0
+"
+checking
+playback
+position
+"
+)
+;
+var
+beginDragX
+=
+scrubberOffsetX
++
+(
+thumbWidth
+/
+2
+)
+;
+var
+endDragX
+=
+scrubberOffsetX
++
+(
+scrubberWidth
+/
+2
+)
+;
+synthesizeMouse
+(
+video
+beginDragX
+scrubberCenterY
+{
+type
+:
+"
+mousedown
+"
+button
+:
+0
+}
+)
+;
+synthesizeMouse
+(
+video
+endDragX
+scrubberCenterY
+{
+type
+:
+"
+mousemove
+"
+button
+:
+0
+}
+)
+;
+synthesizeMouse
+(
+video
+endDragX
+scrubberCenterY
+{
+type
+:
+"
+mouseup
+"
+button
+:
+0
+}
+)
+;
+break
+;
+case
+12
+:
+is
+(
+event
+.
+type
+"
+seeking
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+/
+*
+*
+Click
+the
+slider
+at
+the
+1
+/
+4
+point
+with
+the
+mouse
+(
+jump
+backwards
+)
+*
+/
+case
+13
+:
+is
+(
+event
+.
+type
+"
+seeked
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+var
+expectedTime
+=
+videoDuration
+/
+2
+;
+ok
+(
+Math
+.
+abs
+(
+video
+.
+currentTime
+-
+expectedTime
+)
+<
+0
+.
+1
+"
+checking
+expected
+playback
+position
+"
+)
+;
+synthesizeMouse
+(
+video
+scrubberOffsetX
++
+(
+scrubberWidth
+/
+4
+)
+scrubberCenterY
+{
+}
+)
+;
+break
+;
+case
+14
+:
+is
+(
+event
+.
+type
+"
+seeking
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+break
+;
+case
+15
+:
+is
+(
+event
+.
+type
+"
+seeked
+"
+"
+checking
+event
+type
+"
+)
+;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+/
+/
+The
+scrubber
+currently
+just
+jumps
+towards
+the
+nearest
+pageIncrement
+point
+not
+/
+/
+precisely
+to
+the
+point
+clicked
+.
+So
+expectedTime
+isn
+'
+t
+(
+videoDuration
+/
+4
+)
+.
+/
+/
+We
+should
+end
+up
+at
+1
+.
+733
+but
+sometimes
+we
+end
+up
+at
+1
+.
+498
+.
+I
+guess
+/
+/
+it
+'
+s
+timing
+depending
+if
+the
+<
+scale
+>
+things
+it
+'
+s
+click
+-
+and
+-
+hold
+or
+a
+/
+/
+single
+click
+.
+So
+just
+make
+sure
+we
+end
+up
+less
+that
+the
+previous
+/
+/
+position
+.
+lastPosition
+=
+(
+videoDuration
+/
+2
+)
+-
+0
+.
+1
+;
+ok
+(
+video
+.
+currentTime
+<
+lastPosition
+"
+checking
+expected
+playback
+position
 "
 )
 ;
@@ -874,6 +1779,28 @@ addEventListener
 (
 "
 volumechange
+"
+runTest
+false
+)
+;
+video
+.
+addEventListener
+(
+"
+seeking
+"
+runTest
+false
+)
+;
+video
+.
+addEventListener
+(
+"
+seeked
 "
 runTest
 false
