Disable a check in test_videocontrols.html due to bug 477434 (videocontrols test encounters incorrect seeking behavior)
UltraBlame original commit: 6d058c77b56367779b599976ae5d06f979c5a743

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -1250,6 +1250,40 @@ type
 "
 )
 ;
+ok
+(
+true
+"
+video
+position
+is
+at
+"
++
+video
+.
+currentTime
+)
+;
+/
+/
+Bug
+477434
+-
+-
+sometimes
+we
+get
+0
+.
+098999
+here
+instead
+of
+0
+!
+/
+/
 is
 (
 video
